add css style, some HTML change

--- a/module2-solutions/index.html
+++ b/module2-solutions/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>heloo world</title>
 </head>
 <body>
-
+	<h1>heloo module1</h1>
 </body>
 </html>
